--- a/package.json
+++ b/package.json
@@ -5,20 +5,18 @@
   "version": "3.0.0",
   "author": "zoomkoding <zoomkoding@gmail.com>",
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
-    "gatsby": "^4.9.3",
-    "gatsby-plugin-advanced-sitemap": "^2.0.0",
-    "gatsby-plugin-google-analytics": "^4.9.0",
-    "gatsby-plugin-image": "^2.9.1",
+    "gatsby": "^4.12.1",
+    "gatsby-plugin-advanced-sitemap": "^2.1.0",
+    "gatsby-plugin-google-analytics": "^4.25.0",
+    "gatsby-plugin-image": "^2.12.1",
     "gatsby-plugin-manifest": "^4.9.1",
     "gatsby-plugin-offline": "^5.9.1",
     "gatsby-plugin-react-helmet": "^5.9.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-robots-txt": "1.7.0",
     "gatsby-plugin-sass": "^5.9.0",
-    "gatsby-plugin-sharp": "^4.9.1",
+    "gatsby-plugin-sharp": "^4.12.1",
     "gatsby-remark-autolink-headers": "^5.9.0",
     "gatsby-remark-copy-linked-files": "^5.9.0",
     "gatsby-remark-images": "^6.9.1",
@@ -29,17 +27,16 @@
     "gatsby-source-filesystem": "^4.9.1",
     "gatsby-theme-material-ui": "^5.1.0",
     "gatsby-transformer-remark": "^5.9.1",
-    "gatsby-transformer-sharp": "^4.9.0",
+    "gatsby-transformer-sharp": "^4.12.1",
     "prismjs": "^1.24.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
     "react-rotating-text": "^1.4.1",
     "sass": "^1.43.4",
     "typeface-montserrat": "^1.1.13"
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0",
+    "gh-pages": "^3.2.3",
     "prettier": "2.2.1"
   },
   "keywords": [
@@ -52,7 +49,7 @@
     "build": "gatsby clean && gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "deploy": "gatsby build && gh-pages -d public",
+    "deploy": "gatsby clean && gatsby build && gh-pages -d public",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
